[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/environment/quit.png" type="Texture" id=2]
[ext_resource path="res://Assets/environment/play_btn.png" type="Texture" id=4]
[ext_resource path="res://Assets/environment/titleconcept.png" type="Texture" id=5]
[ext_resource path="res://Assets/items/major-arcana/major_spread.png" type="Texture" id=6]
[ext_resource path="res://Assets/audio/2019-12-09_-_Retro_Forest_-_David_Fesliyan.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/audio/sound_effects/270315__littlerobotsoundfactory__menu_navigate_03.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/player/idle/lilguy_idle.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite6:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.402516, 0.801776 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite6:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="MainMenu" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -600.0
margin_right = 1024.0
rect_pivot_offset = Vector2( -211, 43 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 603.0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -346.0
margin_right = 120.0
margin_bottom = -97.9998

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 80.0
texture_normal = ExtResource( 4 )

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 250.0
margin_bottom = 164.0
texture_normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 181, 405 )
rotation = -0.546288
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
hframes = 13
frame = 1

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 243, 388 )
rotation = -0.218166
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
hframes = 13
frame = 2

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 807, 246 )
rotation = 0.7662
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
hframes = 13
frame = 11

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 873, 548 )
rotation = 0.427606
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
hframes = 13

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 795, 559 )
rotation = -0.216421
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
hframes = 13

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 503, 520 )
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
hframes = 18
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite6"]
root_node = NodePath("../..")
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
